# PLUS

./: .gitignore  LICENSE  README.md  eval_plus_fluorescence.py  eval_plus_homology.py  eval_plus_localization.py  eval_plus_pfam.py  eval_plus_secstr.py  eval_plus_solubility.py  eval_plus_stability.py  eval_plus_transmembrane.py  plus_embedding.py  pyproject.toml  requirements.txt  train_plus_fluorescence.py  train_plus_homology.py  train_plus_localization.py  train_plus_pfam.py  train_plus_secstr.py  train_plus_solubility.py  train_plus_stability.py  train_plus_transmembrane.py
config/data/: embedding.json  fluorescence.json  homology.json  localization.json  pfam_p-elmo.json  pfam_plus-rnn.json  pfam_plus-tfm.json  secstr.json  solubility.json  stability.json  transmembrane.json
config/model/: p-elmo.json  p-elmo_lm.json  plus-rnn_base.json  plus-rnn_base_fluorescence_pr.json  plus-rnn_base_solubility_pr.json  plus-rnn_large.json  plus-rnn_large_fluorescence_pr.json  plus-tfm.json
config/run/: embedding.json  p-elmo_fluorescence.json  p-elmo_homology.json  p-elmo_pfam.json  plus-rnn_base_homology.json  plus-rnn_base_localization.json  plus-rnn_base_pfam.json  plus-rnn_base_stability.json  plus-rnn_large_homology.json  plus-rnn_large_pfam.json  plus-tfm_homology.json  plus-tfm_others.json  plus-tfm_pfam.json
plus/: config.py  optim.py  preprocess.py  train.py
plus/data/: alphabets.py  dataset.py  fluorescence.py  homology.py  localization.py  pfam.py  secstr.py  solubility.py  stability.py  transmembrane.py
src/: config.py  train.py  utils.py
(+20 files in other folders)
